all: refactoring with new approach